--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,181 +1,129 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  background: #0e101c;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
+h1 {
+  font-weight: 100;
+  color: white;
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(79, 98, 148);
+}
 
-body, html, .App, #root {
-  height: 100%;
+.form {
+  background: #0e101c;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+p {
+  color: #bf1650;
+}
+
+p::before {
+  display: inline;
+  content: "⚠ ";
+}
+
+input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid white;
+  padding: 10px 15px;
+  margin-bottom: 10px;
+  font-size: 14px;
+}
+
+label {
+  line-height: 2;
+  text-align: left;
+  display: block;
+  margin-bottom: 13px;
+  margin-top: 20px;
+  color: white;
+  font-size: 14px;
+  font-weight: 200;
+}
+
+button[type="submit"],
+input[type="submit"] {
+  background: #ec5990;
+  color: white;
+  text-transform: uppercase;
+  border: none;
+  margin-top: 40px;
+  padding: 20px;
+  font-size: 16px;
+  font-weight: 100;
+  letter-spacing: 10px;
+}
+
+button[type="submit"]:hover,
+input[type="submit"]:hover {
+  background: #bf1650;
+}
+
+button[type="submit"]:active,
+input[type="button"]:active,
+input[type="submit"]:active {
+  transition: 0.3s all;
+  transform: translateY(3px);
+  border: 1px solid transparent;
+  opacity: 0.8;
+}
+
+input:disabled {
+  opacity: 0.4;
+}
+
+input[type="button"]:hover {
+  transition: 0.3s all;
+}
+
+button[type="submit"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
 }
 
 .App {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+div.crypto {
+  color: #ffff;
   display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-#Header {
-  border-bottom: 1px solid #000000;
-  display: flex;
-  flex: 0.1;
-  width: 100vw;
-  align-items: center;
-  justify-content: center;
-}
-
-#Header button {
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  margin-left: 20px;
-}
-
-#Modal {
-  border-bottom: 1px solid #000000;
-  display: flex;
-  flex-direction: column;
-  flex: 0.2;
-  width: 100vw;
-  align-items: center;
-  justify-content: center;
-}
-
-#Modal input {
   height: 30px;
-  font-size: 24px;
-  text-align: center;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-#Modal button {
-  height: 40px;
-  font-size: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-#ListaSpesa {
-  display: flex;
-  flex: 0.7;
-  width: 100vw;
-  align-items: flex-start;
-
-}
-
-#ListaSpesa>div {
-  padding-left: 20px
-}
-
-#ListaSpesa [type="checkbox"] {
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-}
-
-.delete {
-  box-shadow: 3px 4px 0px 0px #8a2a21;
-  background: linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
-  background-color: #c62d1f;
-  border-radius: 18px;
-  border: 1px solid #d02718;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 7px;
-  padding: 7px 25px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #810e05;
-}
-
-.delete:hover {
-  background: linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
-  background-color: #f24437;
-}
-
-.delete:active {
-  position: relative;
-  top: 1px;
-}
-
-.articolo {
-  display: flex;
-  width: 100vw;
   align-items: center;
-  margin: 10px 0;
 }
 
-span.artTitle {
-  margin-left: 7px;
-}
-
-button.closeModal {
-  background: #dc392b;
-  color: white;
-  border: none;
-  border-radius: 50%;
-}
-
-button.closeModal:active {
-  background: #61140d;
-  color: white;
-  border: none;
-  border-radius: 50%;
-  transition: .1s linear;
-}
-
-.invalidInput {
-  border: 2px solid red;
-}
-
-.errorMessage {
-  padding: 3px;
-  text-transform: uppercase;
-  color: #000;
-  background: orange;
-  border-radius: 10px;
-  margin: 10px 0;
-}
-
-.diceBox {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  margin: auto;
-  flex-direction: column;
-  margin-top: 50px;
-}
-
-.diceResult {
-  height: 100px;
-  width: 100px;
-  background: #ffba6d;
-  margin-bottom: 10px;
+.chart {
+  background: blue;
+  width: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  border: 1px solid black;
 }
 
-.flexButtons {
-  display: flex;
-  justify-content: space-between;
-  width: 150px;
+
+.chartLabel {
+  white-space: nowrap; 
+  width: 40%; 
+  overflow: hidden;
+  text-overflow: ellipsis; 
 }
 
-.diceFlexBox {
-  display: flex;
-  justify-content: space-between;
-  width: 225px;
+.classBox {
+  width: 100%;
 }
