--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,45 @@
+/* mobile */
+@media screen and (max-width: 450px) {
+  .flexbox {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .titleBox {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .cryptosList {
+    width: 100%;
+  }
+}
+
+/* desktop */
+@media screen and (min-width: 1100px) {
+  .flexbox {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+  }
+
+  .titleBox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  h1 {
+    border: none !important;
+    margin-right: 20px;
+    padding-bottom: 6px !important;
+  }
+
+  .cryptosList {
+    width: 60%;
+  }
+}
+
 body {
   background: #0e101c;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -97,7 +139,7 @@ input[type="submit"] {
 }
 
 .App {
-  max-width: 600px;
+  max-width: 100vw;
   margin: 0 auto;
 }
 
@@ -114,6 +156,7 @@ div.crypto {
   width: 100%;
   display: flex;
   justify-content: center;
+  min-width: 13px;
 }
 
 
@@ -126,4 +169,28 @@ div.crypto {
 
 .classBox {
   width: 100%;
+}
+
+h2.subtitle {
+  text-align: center;
+  color: #fff;
+  font-weight: normal;
+}
+
+.chartBox {
+  margin-bottom: 25px;
+}
+
+
+.startAndStop {
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+}
+
+.startAndStop button {
+  width: 150px;
+  font-size: 30px;
 }
